--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerte o alvo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Jogo do Arqueiro 🎯</h1>
-    </header>
     <main>
+        <h1>Jogo do Arqueiro 🎯</h1>
         <div>
             <h2>Sua pontuação: <span class="contador">0</span></h2>
             <button class="cancelar">Zerar pontuação</button>
