Atualizando responsividade e retirando perca de pontos

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <main>
         <h1>Jogo do Arqueiro 🎯</h1>
-        <div>
-            <h2>Sua pontuação: <span class="contador">0</span></h2>
+        <div class="container-pontos">
+            <h2 class="pontos">Sua pontuação: <span class="contador">0</span></h2>
             <button class="cancelar">Zerar pontuação</button>
             <div>
-                <h2>Selecione a dificuldade:</h2>
+                <h2 class="dificuldade">Selecione a dificuldade:</h2>
                 <button class="facil">Fácil</button>
                 <button class="medio">Médio</button>
                 <button class="dificil">Difícil</button>
