--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,20 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <main>
         <h1>Jogo do Arqueiro 🎯</h1>
         <div class="container-pontos">
-            <h2 class="pontos">Sua pontuação: <span class="contador">0</span></h2>
-            <button class="cancelar">Zerar pontuação</button>
-            <div>
+            <div class="container1">
+                <h2 class="pontos">Sua pontuação: <span class="contador">0</span></h2>
+                <button class="cancelar">Zerar pontuação</button>
+            </div>
+            <div class="container2">
                 <h2 class="dificuldade">Selecione a dificuldade:</h2>
                 <button class="facil">Fácil</button>
                 <button class="medio">Médio</button>
@@ -28,4 +34,5 @@
     </main>
     <script src="script.js"></script>
 </body>
+
 </html>
